# PillProphet

./: .env.example  .gitignore  LICENSE  PillProphet.ipynb  README.md  main.ipynb  pyproject.toml  repository_structure.txt
configs/cohort/: v1_phase123_industry.yaml
configs/features/: structured_v1.yaml  text_v1.yaml
configs/labels/: development_v1.yaml
configs/models/: fusion_baseline.yaml  lightgbm.yaml  logistic_regression.yaml
data/processed/benchmarks/: BEFORE_AFTER_PR1.md
docs/: benchmark_policy.md  cohort_definition.md  label_policy.md  leakage_policy.md  modeling_plan.md  project_spec.md
scripts/: audit_labels.py  run_cohort.py  run_features.py  run_ingest.py  run_labels.py  run_train.py
scripts/data_extraction/: parse_clinical_trials.py
scripts/featurization/: clinicalbert_featurization.ipynb
scripts/preprocessing/: preprocessing.ipynb
scripts/utils/: helpers.py
src/pillprophet/: __init__.py
src/pillprophet/analysis/: errors.py  explain.py  subgroup.py
src/pillprophet/cohort/: build_cohort.py  filters.py
src/pillprophet/features/: registry.py  structured.py  text.py  validation.py
src/pillprophet/io/: ingest.py  parse.py  storage.py
src/pillprophet/labels/: censoring.py  dev_eligibility.py  development.py  label_factory.py  operational.py
src/pillprophet/models/: calibration.py  evaluate.py  predict.py  preprocessing.py  splits.py  train.py
src/pillprophet/snapshots/: availability.py  build_snapshots.py
src/pillprophet/utils/: paths.py  (+2 more)
tests/: test_cohort.py  test_features.py  test_labels.py  test_leakage.py  test_models.py
(+8 files in other folders)
